[package]
name = "merkle-search-tree"
description = "A data structure for efficient state-based CRDT replication and anti-entropy"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
version = "0.0.1"
edition = "2021"

license = "Apache-2.0"
documentation = "https://docs.rs/bloom2"
repository = "https://github.com/domodwyer/merkle-search-tree"
keywords = ["merkle", "tree", "crdt", "anti entropy", "hash tree"]
categories = ["data-structures", "cryptography"]

[dependencies]
siphasher = "0.3.10"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.5.1"
insta = "1.29.0"
paste = "1.0.12"
proptest = "1.2.0"

[[bench]]
name = "bench"
harness = false
