[package]
name = "merkle-search-tree"
description = "A data structure for efficient state-based CRDT replication and anti-entropy"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
version = "0.7.1"
edition = "2021"

license = "Apache-2.0"
documentation = "https://docs.rs/merkle-search-tree"
repository = "https://github.com/domodwyer/merkle-search-tree"
keywords = ["merkle", "tree", "crdt", "anti-entropy", "hash"]
categories = ["data-structures", "cryptography"]
exclude = [".github"]

[dependencies]
base64 = { version = "0.22.0", optional = true }
siphasher = "1.0.0"
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.5.1"
insta = "1.31.0"
paste = "1.0.14"
proptest = "1.2.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
tracing = ["dep:tracing"]
default = ["digest_base64"]
digest_base64 = ["dep:base64"]

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

# Allow the cfg(not(fuzzing)) provided by cargo-fuzz to disable specific debug
# assertions to increase coverage.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
