[package]
name = "merkle-search-tree-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.merkle-search-tree]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "tree"
path = "fuzz_targets/tree.rs"
test = false
doc = false

[[bin]]
name = "diff"
path = "fuzz_targets/diff.rs"
test = false
doc = false
